fixing some weird spacing between sections on the portfolio side of things

--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -3,14 +3,14 @@
   padding:4% 7%;
 }
 .section-1{
-  margin-bottom:4%;
-  padding-bottom:3%;
+  margin-bottom:5%;
+  padding-bottom:5%;
   border-bottom:3px solid;
 }
 .section-2{
   padding:0;
-  margin-bottom:4%;
-  padding-bottom:3%;
+  margin-bottom:5%;
+  padding-bottom:5%;
   border-bottom:3px solid;
 }
 .callout{
@@ -45,7 +45,7 @@
 }
 .portfolio-item-wrap {
   position:relative;
-  margin:7% 0;
+  margin:5% 0;
   h2 {
     font-weight: 700;
     font-size: 1.5rem;
@@ -95,6 +95,7 @@
     -webkit-column-gap: 20px;
     column-count: 2;
     column-gap: 20px;
+    margin-top:5%;
     li{
       list-style:none;
       font-size: 1.5rem;
