--- a/css/_queries.scss
+++ b/css/_queries.scss
@@ -50,15 +50,17 @@
       margin:0;
     }
   }
+  h4{
+    margin-bottom:10%;
+  }
   .social-inner {
       position: relative;
   }
   .social{
     margin:8% 0;
   }
-  .section-1{
-    margin-bottom:15%;
-    padding-top: 5%;
+  .section-1, .section-2{
+    padding-bottom:10%;
   }
   .callout{
     h1{
@@ -78,5 +80,11 @@
   .image{
     width:100%;
     margin-left:0;
+  }
+  .port-list{
+    column-count:1;
+    li{
+      margin-bottom:5%;
+    }
   }
 }
