--- a/css/main.css
+++ b/css/main.css
@@ -51,14 +51,14 @@
   padding: 4% 7%; }
 
 .section-1 {
-  margin-bottom: 4%;
-  padding-bottom: 3%;
+  margin-bottom: 5%;
+  padding-bottom: 5%;
   border-bottom: 3px solid; }
 
 .section-2 {
   padding: 0;
-  margin-bottom: 4%;
-  padding-bottom: 3%;
+  margin-bottom: 5%;
+  padding-bottom: 5%;
   border-bottom: 3px solid; }
 
 .callout h1 {
@@ -90,7 +90,7 @@
 
 .portfolio-item-wrap {
   position: relative;
-  margin: 7% 0; }
+  margin: 5% 0; }
   .portfolio-item-wrap h2 {
     font-weight: 700;
     font-size: 1.5rem;
@@ -134,7 +134,8 @@
   -webkit-column-count: 2;
   -webkit-column-gap: 20px;
   column-count: 2;
-  column-gap: 20px; }
+  column-gap: 20px;
+  margin-top: 5%; }
   .port-list li {
     list-style: none;
     font-size: 1.5rem;
@@ -260,13 +261,14 @@ button {
       font-size: 4.25rem;
       line-height: 5rem;
       margin: 0; }
+  h4 {
+    margin-bottom: 10%; }
   .social-inner {
     position: relative; }
   .social {
     margin: 8% 0; }
-  .section-1 {
-    margin-bottom: 15%;
-    padding-top: 5%; }
+  .section-1, .section-2 {
+    padding-bottom: 10%; }
   .callout h1 {
     font-size: 3rem; }
   .callout span {
@@ -278,4 +280,8 @@ button {
     margin-left: 0; }
   .image {
     width: 100%;
-    margin-left: 0; } }
+    margin-left: 0; }
+  .port-list {
+    column-count: 1; }
+    .port-list li {
+      margin-bottom: 5%; } }
